gcc/testsuite/rust/rustc/ui/rfc-2126-extern-absolute-paths/non-existent-1.rs
// edition:2018

use xcrate::S; // { dg-error ".E0432." "" { target *-*-* } }

fn main() {}

